--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'HallymMjo-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2204@1.0/HallymMjo-Regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -14,9 +21,7 @@ html {
 }
 
 body {
-  --notion-font: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-    'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-    'Droid Sans', 'Helvetica Neue', 'Noto Sans', sans-serif;
+  --notion-font: 'HallymMjo-Regular', sans-serif;
   font-family: var(--notion-font);
   overflow-x: hidden;
 }
@@ -32,4 +37,8 @@ body {
 .static-tweet-emoji {
   height: 1.2em !important;
   width: 1.2em !important;
+}
+
+.styles_githubCorner__7QjNo {
+  display:none;
 }
